@@ -80,7 +80,7 @@ p,ul,ol {
 				<li><a href="#NaviComputer">NaviComputer</a></li>
 				<li><a href="#nfComPass">nfComPass</a></li>
 				<li><a href="#OruxMaps">OruxMaps</a></li>
-				<!-- OSMAND -->
+				<li><a href="#OSMAND">OSMAND</a></li>
 				<li><a href="#Osmdroid">Osmdroid</a></li>
 				<li><a href="#OSMTracker">OSMTracker</a></li>
 				<li><a href="#Ozi">OziExplorer / large PNG image</a></li>
@@ -89,7 +89,8 @@ p,ul,ol {
 				<li><a href="#SportsTracker">[Nokia] Sports Tracker</a></li>
 				<li><a href="#TTQV">Touratech QV</a></li>
 				<li><a href="#TrekBuddy">TrekBuddy</a></li>
-				<li><a href="#TwoNav">TwoNav (RMAP)</a></li>
+				<li><a href="#TwoNav">TwoNav (RMAP)</a>
+				</li>
 				<!-- UBlox -->
 			</ul>
 		</li>
@@ -649,6 +650,24 @@ MGMapsCache\macos_12 MGMapsCache\macroad_12 MGMapsCache\macsat_12
 	<p>The output format of an "atlas" for OruxMaps is one or more map
 		directories in the atlas directory. You have to copy those maps onto
 		your device (default directory: /oruxmaps/mapfiles/).</p>
+	<!-- *************************************************************************** -->
+	<h3>
+		<a name="OSMAND">Creating atlases for OSMAND</a>
+	</h3>
+	<p>
+		For creating atlases compatible with OSMAND you have to select <b>OSMAND</b>
+		as format in atlas format selection dialog that appears when starting
+		a new atlas (menu <b>Atlas</b> entry <b>New Atlas</b>).<br> As
+		atlases for OSMAND do not support all features provided by Mobile
+		Atlas Creator the following settings are ignored when creating atlases
+		for Osmdroid:
+	</p>
+	<ul>
+		<li>Change height or width of the map tiles</li>
+		<li>Name of all layers and maps</li>
+		<li>Structure of the atlas (which maps belongs to which layer)</li>
+	</ul>
+	<!-- *************************************************************************** -->
 	<!-- *************************************************************************** -->
 	<h3>
 		<a name="Osmdroid">Creating atlases for Osmdroid</a>
